--- a/trojanzoo_sphinx_theme/theme_variables.jinja
+++ b/trojanzoo_sphinx_theme/theme_variables.jinja
@@ -1,8 +1,8 @@
 {%- set external_urls = {
-  'github': 'https://github.com/ain-soph/trojanzoo/',
-  'github_issues': 'https://github.com/ain-soph/trojanzoo/issues/',
-  'docs': 'https://ain-soph.github.io/trojanzoo/',
-  'home': 'https://ain-soph.github.io/trojanzoo/',
-  'vision': 'https://ain-soph.github.io/trojanzoo/trojanvision/',
+  'github': '',
+  'github_issues': '',
+  'home': '',
+  'docs': '',
+  'items': {},
 }
 -%}
