--- a/docs/source/_templates/image_variables.jinja
+++ b/docs/source/_templates/image_variables.jinja
@@ -1,6 +1,6 @@
 {%- set external_urls = {
-  'logo': 'images/trojanzoo-logo.svg',
-  'logo-dark': 'images/trojanzoo-logo-dark.svg',
-  'logo-icon': 'images/trojanzoo-logo-icon.svg',
+  'logo': 'img/trojanzoo-logo.svg',
+  'logo-dark': 'img/trojanzoo-logo-dark.svg',
+  'logo-icon': 'img/trojanzoo-logo-icon.svg',
 }
 -%}
