--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -1,8 +1,8 @@
 {%- set external_urls = {
   'github': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/',
   'github_issues': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/issues/',
-  'home': 'https://ain-soph.github.io/trojanzoo_sphinx_theme/',
-  'docs': 'https://ain-soph.github.io/trojanzoo_sphinx_theme/',
+  'home': '',
+  'docs': '',
   'items': {},
 }
 -%}
