--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -1,8 +1,7 @@
 {%- set external_urls = {
   'github': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/',
   'github_issues': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/issues/',
-  'home': '',
-  'docs': '',
+  'home': '/',
   'items': {},
 }
 -%}
