--- a/trojanzoo_sphinx_theme/theme_variables.jinja
+++ b/trojanzoo_sphinx_theme/theme_variables.jinja
@@ -1,8 +1,7 @@
 {%- set external_urls = {
   'github': '',
   'github_issues': '',
-  'home': '',
-  'docs': '',
+  'home': '/',
   'items': {},
 }
 -%}
