--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -3,5 +3,6 @@
   'github_issues': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/issues/',
   'home': '/',
   'items': {},
+  'collapsedSections':['Theme Documentation', 'This is an incredibly long caption for a long menu'],
 }
 -%}
