--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -1,7 +1,12 @@
 {%- set external_urls = {
   'github': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/',
   'home': '/',
-  'items': {},
+  'items': {
+    'AlpsPlot': '',
+    'TrojanZoo': 'https://ain-soph.github.io/trojanzoo',
+    'trojanzoo_sphinx_theme': 'https://ain-soph.github.io/trojanzoo_sphinx_theme',
+    'base': 'https://github.com/ain-soph/base',
+  },
   'collapsedSections':[],
 }
 -%}
