--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -2,9 +2,9 @@
   'github': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/',
   'home': '/',
   'items': {
-    'AlpsPlot': '',
+    'AlpsPlot': 'https://ain-soph.github.io/alpsplot',
     'TrojanZoo': 'https://ain-soph.github.io/trojanzoo',
-    'trojanzoo_sphinx_theme': 'https://ain-soph.github.io/trojanzoo_sphinx_theme',
+    'trojanzoo_sphinx_theme': '',
     'base': 'https://github.com/ain-soph/base',
   },
   'collapsedSections':[],
