--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -1,6 +1,6 @@
 {%- set external_urls = {
   'github': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/',
-  'home': '/',
+  'home': 'https://ain-soph.github.io/',
   'items': {
     'AlpsPlot': 'https://ain-soph.github.io/alpsplot',
     'TrojanZoo': 'https://ain-soph.github.io/trojanzoo',
