--- a/docs/source/_templates/theme_variables.jinja
+++ b/docs/source/_templates/theme_variables.jinja
@@ -1,10 +1,10 @@
 {%- set external_urls = {
-  'github': 'https://github.com/ain-soph/trojanzoo_sphinx_theme/',
-  'home': 'https://ain-soph.github.io/',
+  'github': 'ain-soph/trojanzoo_sphinx_theme',
+  'home': '/',
   'items': {
-    'AlpsPlot': 'https://ain-soph.github.io/alpsplot',
-    'TrojanZoo': 'https://ain-soph.github.io/trojanzoo',
-    'trojanzoo_sphinx_theme': '',
+    'AlpsPlot': '/alpsplot',
+    'TrojanZoo': '/trojanzoo',
+    'trojanzoo_sphinx_theme': '/trojanzoo_sphinx_theme',
     'base': 'https://github.com/ain-soph/base',
   },
   'collapsedSections':[],
