--- a/trojanzoo_sphinx_theme/theme_variables.jinja
+++ b/trojanzoo_sphinx_theme/theme_variables.jinja
@@ -1,5 +1,5 @@
 {%- set external_urls = {
-  'github': '',
+  'github': 'ain-soph/trojanzoo_sphinx_theme',
   'home': '/',
   'items': {},
   'collapsedSections':[],
