--- a/trojanzoo_sphinx_theme/static/css/theme.css
+++ b/trojanzoo_sphinx_theme/static/css/theme.css
@@ -9746,7 +9746,7 @@ pre {
 .header-logo {
   height: 23px;
   width: 93px;
-  /* background-image: url("../images/trojanzoo-logo.svg"); */
+  /* background-image: url(var(--logo)); */
   background-repeat: no-repeat;
   background-size: 93px 23px;
   display: block;
@@ -10002,7 +10002,7 @@ pre {
   }
 }
 
-.docs-tutorials-resources {
+.docs-resources {
   background-color: #262626;
   color: #ffffff;
   padding-top: 2.5rem;
@@ -10011,42 +10011,42 @@ pre {
   z-index: 201;
 }
 @media screen and (min-width: 768px) {
-  .docs-tutorials-resources {
+  .docs-resources {
     padding-top: 5rem;
     padding-bottom: 5rem;
   }
 }
-.docs-tutorials-resources p {
+.docs-resources p {
   color: #929292;
   font-size: 1.125rem;
 }
-.docs-tutorials-resources h2 {
+.docs-resources h2 {
   font-size: 1.5rem;
   letter-spacing: -0.25px;
   text-transform: none;
   margin-bottom: 0.25rem;
 }
 @media screen and (min-width: 768px) {
-  .docs-tutorials-resources h2 {
+  .docs-resources h2 {
     margin-bottom: 1.25rem;
   }
 }
-.docs-tutorials-resources .col-md-4 {
+.docs-resources .col-md-4 {
   margin-bottom: 2rem;
   text-align: center;
 }
 @media screen and (min-width: 768px) {
-  .docs-tutorials-resources .col-md-4 {
+  .docs-resources .col-md-4 {
     margin-bottom: 0;
   }
 }
-.docs-tutorials-resources .with-right-arrow {
+.docs-resources .with-right-arrow {
   margin-left: 12px;
 }
-.docs-tutorials-resources .with-right-arrow:hover {
+.docs-resources .with-right-arrow:hover {
   background-image: url("../images/chevron-right-white.svg");
 }
-.docs-tutorials-resources p {
+.docs-resources p {
   font-size: 1rem;
   line-height: 1.5rem;
   letter-spacing: 0.22px;
@@ -10054,15 +10054,15 @@ pre {
   margin-bottom: 0;
 }
 @media screen and (min-width: 768px) {
-  .docs-tutorials-resources p {
+  .docs-resources p {
     margin-bottom: 1.25rem;
   }
 }
-.docs-tutorials-resources a {
+.docs-resources a {
   font-size: 1.125rem;
   color: var(--pytorch);
 }
-.docs-tutorials-resources a:hover {
+.docs-resources a:hover {
   color: #ffffff;
 }
 
@@ -10079,7 +10079,7 @@ pre {
 }
 
 .footer-logo {
-  /* background-image: url("../images/trojanzoo-logo-icon.svg"); */
+  /* background-image: url(var(--logo_icon)); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: 20px 24px;
@@ -10365,13 +10365,13 @@ ul.sphinx-template-breadcrumbs a {
   top: 0;
 }
 
-/* .tutorials-header .header-logo {
-  background-image: url("../images/trojanzoo-logo-dark.svg");
+/* .docs-header .header-logo {
+  background-image: url(var(--logo_dark));
 } */
-.tutorials-header .main-menu ul li a {
+.docs-header .main-menu ul li a {
   color: #262626;
 }
-.tutorials-header .main-menu-open-button {
+.docs-header .main-menu-open-button {
   background-image: url("../images/icon-menu-dots-dark.svg");
 }
 
@@ -11134,10 +11134,10 @@ article.sphinx-template-article .math {
   color: #262626;
   width: auto;
   text-align: center;
-}
-article.sphinx-template-article .math img {
-  width: auto;
-}
+  }
+  article.sphinx-template-article .math img {
+    width: auto;
+  }
 
 .sphinx-template-breadcrumbs-wrapper {
   width: 100%;
@@ -11197,7 +11197,7 @@ a:hover {
   }
 }
 
-.docs-tutorials-resources a {
+.docs-resources a {
   color: #ee4c2c;
 }
 
@@ -11242,9 +11242,6 @@ a:hover {
   .sphinx-template-call-to-action-links {
     padding-top: 2.5rem;
   }
-}
-.sphinx-template-call-to-action-links #tutorial-type {
-  display: none;
 }
 .sphinx-template-call-to-action-links .call-to-action-img, .sphinx-template-call-to-action-links .call-to-action-notebook-img {
   height: 1.375rem;
@@ -11294,272 +11291,6 @@ a:hover {
 .sphinx-template-call-to-action-links a #github-view-link:hover {
   border-bottom-color: var(--pytorch);
   color: var(--pytorch);
-}
-
-#tutorial-cards-container #tutorial-cards {
-  width: 100%;
-}
-#tutorial-cards-container .tutorials-nav {
-  padding-left: 0;
-  padding-right: 0;
-  padding-bottom: 0;
-}
-#tutorial-cards-container .tutorials-hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-#tutorial-cards-container .card.tutorials-card {
-  border-radius: 0;
-  border-color: #f3f4f7;
-  height: 98px;
-  margin-bottom: 1.25rem;
-  margin-bottom: 1.875rem;
-  overflow: scroll;
-  background-color: #f3f4f7;
-  cursor: pointer;
-}
-@media screen and (min-width: 1240px) {
-  #tutorial-cards-container .card.tutorials-card {
-    height: 200px;
-    overflow: inherit;
-  }
-}
-@media (min-width: 768px) and (max-width: 1239px) {
-  #tutorial-cards-container .card.tutorials-card {
-    height: 200px;
-    overflow: scroll;
-  }
-}
-#tutorial-cards-container .card.tutorials-card .tutorials-image {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  height: 96px;
-  width: 96px;
-  opacity: 0.5;
-}
-#tutorial-cards-container .card.tutorials-card .tutorials-image img {
-  height: 100%;
-  width: 100%;
-}
-@media screen and (min-width: 768px) {
-  #tutorial-cards-container .card.tutorials-card .tutorials-image {
-    height: 100%;
-    width: 25%;
-  }
-}
-@media (min-width: 768px) and (max-width: 1239px) {
-  #tutorial-cards-container .card.tutorials-card .tutorials-image {
-    height: 100%;
-    width: 198px;
-  }
-}
-#tutorial-cards-container .card.tutorials-card .tutorials-image:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-  background: #000000;
-  opacity: .075;
-}
-#tutorial-cards-container .card.tutorials-card .card-title-container {
-  width: 70%;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-}
-@media screen and (min-width: 768px) {
-  #tutorial-cards-container .card.tutorials-card .card-title-container {
-    width: 75%;
-  }
-}
-@media (min-width: 768px) and (max-width: 1239px) {
-  #tutorial-cards-container .card.tutorials-card .card-title-container {
-    width: 70%;
-  }
-}
-#tutorial-cards-container .card.tutorials-card .card-title-container h4 {
-  margin-bottom: 1.125rem;
-  margin-top: 0;
-  font-size: 1.5rem;
-}
-#tutorial-cards-container .card.tutorials-card p.card-summary, #tutorial-cards-container .card.tutorials-card p.tags {
-  font-size: 0.9375rem;
-  line-height: 1.5rem;
-  margin-bottom: 0;
-  color: #6c6c6d;
-  font-weight: 400;
-  width: 70%;
-}
-@media screen and (min-width: 768px) {
-  #tutorial-cards-container .card.tutorials-card p.card-summary, #tutorial-cards-container .card.tutorials-card p.tags {
-    width: 75%;
-  }
-}
-@media (min-width: 768px) and (max-width: 1239px) {
-  #tutorial-cards-container .card.tutorials-card p.card-summary, #tutorial-cards-container .card.tutorials-card p.tags {
-    width: 70%;
-  }
-}
-#tutorial-cards-container .card.tutorials-card p.tags {
-  margin-top: 30px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-#tutorial-cards-container .card.tutorials-card h4 {
-  color: #262626;
-  margin-bottom: 1.125rem;
-}
-#tutorial-cards-container .card.tutorials-card a {
-  height: 100%;
-}
-@media screen and (min-width: 768px) {
-  #tutorial-cards-container .card.tutorials-card a {
-    min-height: 190px;
-  }
-}
-@media (min-width: 768px) and (max-width: 1239px) {
-  #tutorial-cards-container .card.tutorials-card a {
-    min-height: 234px;
-  }
-}
-@media screen and (min-width: 768px) {
-  #tutorial-cards-container .card.tutorials-card:after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 1px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: var(--pytorch);
-    -webkit-transition: width .250s ease-in-out;
-    transition: width .250s ease-in-out;
-  }
-  #tutorial-cards-container .card.tutorials-card:hover:after {
-    width: 100%;
-  }
-}
-#tutorial-cards-container .card.tutorials-card:hover {
-  background-color: #ffffff;
-  border: 1px solid #e2e2e2;
-  border-bottom: none;
-}
-#tutorial-cards-container .card.tutorials-card:hover p.card-summary {
-  color: #262626;
-}
-#tutorial-cards-container .card.tutorials-card:hover .tutorials-image {
-  opacity: unset;
-}
-#tutorial-cards-container .tutorial-tags-container {
-  width: 75%;
-}
-#tutorial-cards-container .tutorial-tags-container.active {
-  width: 0;
-}
-#tutorial-cards-container .tutorial-filter-menu ul {
-  list-style-type: none;
-  padding-left: 1.25rem;
-}
-#tutorial-cards-container .tutorial-filter-menu ul li {
-  padding-right: 1.25rem;
-  word-break: break-all;
-}
-#tutorial-cards-container .tutorial-filter-menu ul li a {
-  color: #979797;
-}
-#tutorial-cards-container .tutorial-filter-menu ul li a:hover {
-  color: var(--pytorch);
-}
-#tutorial-cards-container .tutorial-filter {
-  cursor: pointer;
-}
-#tutorial-cards-container .filter-btn {
-  color: #979797;
-  border: 1px solid #979797;
-  display: inline-block;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  margin-bottom: 5px;
-}
-#tutorial-cards-container .filter-btn:hover {
-  border: 1px solid var(--pytorch);
-  color: var(--pytorch);
-}
-#tutorial-cards-container .filter-btn.selected {
-  background-color: var(--pytorch);
-  border: 1px solid var(--pytorch);
-  color: #ffffff;
-}
-#tutorial-cards-container .all-tag-selected {
-  background-color: #979797;
-  color: #ffffff;
-}
-#tutorial-cards-container .all-tag-selected:hover {
-  border-color: #979797;
-  color: #ffffff;
-}
-#tutorial-cards-container .pagination .page {
-  border: 1px solid #dee2e6;
-  padding: 0.5rem 0.75rem;
-}
-#tutorial-cards-container .pagination .active .page {
-  background-color: #dee2e6;
-}
-
-article.sphinx-template-article .tutorials-callout-container {
-  padding-bottom: 50px;
-}
-article.sphinx-template-article .tutorials-callout-container .col-md-6 {
-  padding-bottom: 10px;
-}
-article.sphinx-template-article .tutorials-callout-container .text-container {
-  padding: 10px 0px 30px 0px;
-  padding-bottom: 10px;
-}
-article.sphinx-template-article .tutorials-callout-container .text-container .body-paragraph {
-  color: #666666;
-  font-weight: 300;
-  font-size: 1.125rem;
-  line-height: 1.875rem;
-}
-article.sphinx-template-article .tutorials-callout-container .btn.callout-button {
-  font-size: 1.125rem;
-  border-radius: 0;
-  border: none;
-  background-color: #f3f4f7;
-  color: #6c6c6d;
-  font-weight: 400;
-  position: relative;
-  letter-spacing: 0.25px;
-}
-@media screen and (min-width: 768px) {
-  article.sphinx-template-article .tutorials-callout-container .btn.callout-button:after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 1px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: var(--pytorch);
-    -webkit-transition: width .250s ease-in-out;
-    transition: width .250s ease-in-out;
-  }
-  article.sphinx-template-article .tutorials-callout-container .btn.callout-button:hover:after {
-    width: 100%;
-  }
-}
-article.sphinx-template-article .tutorials-callout-container .btn.callout-button a {
-  color: inherit;
 }
 
 .sphinx-template-container {
