--- a/trojanzoo_sphinx_theme/static/css/theme.css
+++ b/trojanzoo_sphinx_theme/static/css/theme.css
@@ -71,6 +71,10 @@ body {
 
   --lightning: #792ee5;
   --pytorch: #e44c2c;
+  --google_blue: #4285f4;
+  --google_red: #db4437;
+  --google_yellow: #f4b400;
+  --google_green: #0f9d58;
 }
 
 [tabindex="-1"]:focus {
@@ -9746,7 +9750,6 @@ pre {
 .header-logo {
   height: 23px;
   width: 93px;
-  /* background-image: url(var(--logo)); */
   background-repeat: no-repeat;
   background-size: 93px 23px;
   display: block;
@@ -9948,11 +9951,11 @@ pre {
   padding-left: 15px;
 }
 .mobile-main-menu-links-container ul.resources-mobile-menu-items li.active a {
-  color: #0f9d58;
+  color: var(--google_green);
 }
 .mobile-main-menu-links-container ul.resources-mobile-menu-items li.active:before {
   content: "•";
-  color: #0f9d58;
+  color: var(--google_green);
   font-size: 1.375rem;
   text-align: left;
   display: inline-block;
@@ -10079,7 +10082,6 @@ pre {
 }
 
 .footer-logo {
-  /* background-image: url(var(--logo_icon)); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: 20px 24px;
@@ -10365,9 +10367,6 @@ ul.sphinx-template-breadcrumbs a {
   top: 0;
 }
 
-/* .docs-header .header-logo {
-  background-image: url(var(--logo_dark));
-} */
 .docs-header .main-menu ul li a {
   color: #262626;
 }
@@ -11769,7 +11768,7 @@ a:hover {
 /* l3 current text */
 .sphinx-template-left-menu li.toctree-l3.current > a,
 .sphinx-template-right-menu li.toctree-l3.current > a {
-  color: #0f9d58;
+  color: var(--google_green);
 }
 /* l3 current point */
 .sphinx-template-left-menu li.toctree-l3.current > a:before,
@@ -11780,7 +11779,7 @@ a:hover {
   left: -15px;
   top: -10%;
   font-size: 1.2rem;
-  color: #0f9d58;
+  color: var(--google_green);
 }
 @media screen and (min-width: 1101px) {
   .sphinx-template-left-menu li.toctree-l3.current > a:before,
@@ -12249,7 +12248,7 @@ a:hover {
   text-align: left;
 }
 .header-holder .main-menu ul li a.nav-dropdown-item.active:hover:before {
-  color: #0f9d58;
+  color: var(--google_green);
 }
 .header-holder .main-menu ul li a.nav-dropdown-item:last-of-type {
   border-bottom-color: transparent;
