--- a/trojanzoo_sphinx_theme/static/css/theme.css
+++ b/trojanzoo_sphinx_theme/static/css/theme.css
@@ -71,11 +71,12 @@ body {
 
   --lightning: #792ee5;
   --pytorch: #e44c2c;
+  --pytorch-red: #ee4c2c;
   --readthedoc: #2980b9;
-  --google_blue: #4285f4;
-  --google_red: #db4437;
-  --google_yellow: #f4b400;
-  --google_green: #0f9d58;
+  --google-blue: #4285f4;
+  --google-red: #db4437;
+  --google-yellow: #f4b400;
+  --google-green: #0f9d58;
 }
 
 [tabindex="-1"]:focus {
@@ -9952,11 +9953,11 @@ pre {
   padding-left: 15px;
 }
 .mobile-main-menu-links-container ul.resources-mobile-menu-items li.active a {
-  color: var(--google_green);
+  color: var(--google-green);
 }
 .mobile-main-menu-links-container ul.resources-mobile-menu-items li.active:before {
   content: "•";
-  color: var(--google_green);
+  color: var(--google-green);
   font-size: 1.375rem;
   text-align: left;
   display: inline-block;
@@ -10317,11 +10318,11 @@ p a:hover {
 p a:link,
 p a:visited,
 p a:hover {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 .sphinx-template-breadcrumbs li a {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 ul.sphinx-template-breadcrumbs {
@@ -10333,7 +10334,7 @@ ul.sphinx-template-breadcrumbs li {
   font-size: 0.875rem;
 }
 ul.sphinx-template-breadcrumbs a {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
   text-decoration: none;
 }
 
@@ -10411,7 +10412,7 @@ ul.sphinx-template-breadcrumbs a {
   cursor: pointer;
 }
 .rst-content footer .rating-container .stars-outer .star-fill {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 .rst-content footer div[role="contentinfo"] {
   padding-top: 2.5rem;
@@ -10442,7 +10443,7 @@ pre {
   color: #6c6c6d;
 }
 
-.headerlink {
+/* .headerlink {
   color: #0A507A !important;
   font-family: FontAwesome;
   float: right;
@@ -10460,7 +10461,7 @@ caption:hover > a.headerlink,
 p.caption:hover > a.headerlink,
 div.code-block-caption:hover > a.headerlink {
   visibility: visible;
-}
+} */
 
 
 a:link.has-code,
@@ -10598,7 +10599,7 @@ article.sphinx-template-article .sphx-glr-thumbcontainer .figure a.reference.int
 }
 @media screen and (min-width: 768px) {
   article.sphinx-template-article .sphx-glr-thumbcontainer:after {
-    background-color: #ee4c2c;
+    background-color: var(--pytorch-red);
   }
 }
 
@@ -10619,12 +10620,15 @@ article.sphinx-template-article .py.function dt, article.sphinx-template-article
   position: relative;
   background: #f3f4f7;
   padding: 0.5rem;
-  border-left: 3px solid #ee4c2c;
+  border-left: 3px solid var(--pytorch-red);
   word-wrap: break-word;
   padding-right: 100px;
 }
-article.sphinx-template-article .py.function dd dt {
+article.sphinx-template-article .py.function dd dt, article.sphinx-template-article .attribute dd dt {
   border-left: 3px solid var(--lightning);
+}
+article.sphinx-template-article .class .attribute dd dt, article.sphinx-template-article .class dd dt {
+  border-top: 3px solid var(--lightning);
 }
 article.sphinx-template-article .py.function dt em.property, article.sphinx-template-article .attribute dt em.property, article.sphinx-template-article .class dt em.property {
   font-family: inherit;
@@ -10641,7 +10645,7 @@ article.sphinx-template-article .py.function dt a, article.sphinx-template-artic
           transform: perspective(1px) translateY(-50%);
 }
 article.sphinx-template-article .py.function dt:hover .viewcode-link, article.sphinx-template-article .attribute dt:hover .viewcode-link, article.sphinx-template-article .class dt:hover .viewcode-link {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 article.sphinx-template-article .py.function .anchorjs-link, article.sphinx-template-article .attribute .anchorjs-link, article.sphinx-template-article .class .anchorjs-link {
   display: inline;
@@ -10716,7 +10720,7 @@ article.sphinx-template-article .attribute .has-code {
 }
 article.sphinx-template-article .class dt {
   border-left: none;
-  border-top: 3px solid #ee4c2c;
+  border-top: 3px solid var(--pytorch-red);
   padding-left: 4em;
 }
 article.sphinx-template-article .class dt em.property {
@@ -10729,7 +10733,7 @@ article.sphinx-template-article .class dd .docutils dt {
 article.sphinx-template-article .class em.property {
   text-transform: uppercase;
   font-style: normal;
-  color: #ee4c2c;
+  color: var(--pytorch-red);
   font-size: 1rem;
   letter-spacing: 0;
   padding-right: 0.75rem;
@@ -10741,12 +10745,13 @@ article.sphinx-template-article .class dl dt em.property {
 }
 article.sphinx-template-article .class .method dt,
 article.sphinx-template-article .class .staticmethod dt {
-  border-left: 3px solid #ee4c2c;
+  border-left: 3px solid var(--lightning);
   border-top: none;
-}
-article.sphinx-template-article .class .method dt,
-article.sphinx-template-article .class .staticmethod dt {
   padding-left: 0.5rem;
+}
+article.sphinx-template-article .class .method dd dt,
+article.sphinx-template-article .class .staticmethod dd dt {
+  border-left: 3px solid var(--google-green);
 }
 article.sphinx-template-article .class .attribute dt {
   border-top: none;
@@ -11015,7 +11020,7 @@ article.sphinx-template-article .admonition > p:last-of-type {
 }
 @media screen and (min-width: 768px) {
   .sphinx-template-article div.sphx-glr-download a:after {
-    background-color: #ee4c2c;
+    background-color: var(--pytorch-red);
   }
 }
 @media screen and (min-width: 768px) {
@@ -11085,7 +11090,7 @@ article.sphinx-template-article .sphinx-template-table-responsive table tbody td
 }
 article.sphinx-template-article .sphinx-template-table-responsive table tbody td .pre {
   background: #ffffff;
-  color: #ee4c2c;
+  color: var(--pytorch-red);
   font-size: 87.5%;
 }
 article.sphinx-template-article .sphinx-template-table-responsive table tbody td code {
@@ -11172,33 +11177,33 @@ article.sphinx-template-article .math {
 a:link,
 a:visited,
 a:hover {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 ::-webkit-input-placeholder {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 ::-moz-placeholder {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 :-ms-input-placeholder {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 :-moz-placeholder {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 @media screen and (min-width: 768px) {
   .site-footer a:hover {
-    color: #ee4c2c;
+    color: var(--pytorch-red);
   }
 }
 
 .docs-resources a {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 .header-holder {
@@ -11207,14 +11212,14 @@ a:hover {
 }
 
 .header-holder .main-menu ul li.active:after {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 .header-holder .main-menu ul li.active a {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 @media screen and (min-width: 1100px) {
   .header-holder .main-menu ul li a:hover {
-    color: #ee4c2c;
+    color: var(--pytorch-red);
   }
 }
 
@@ -11681,7 +11686,7 @@ a:hover {
 /* l1 current text */
 .sphinx-template-left-menu li.toctree-l1.current > a,
 .sphinx-template-right-menu li.toctree-l1.current > a {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 
@@ -11711,7 +11716,7 @@ a:hover {
   left: -15px;
   top: -10%;
   font-size: 1.375rem;
-  color: #ee4c2c; /* point color */
+  color: var(--pytorch-red); /* point color */
 }
 @media screen and (min-width: 1101px) {
   .sphinx-template-left-menu li.toctree-l1.current > a:before,
@@ -11769,7 +11774,7 @@ a:hover {
 /* l3 current text */
 .sphinx-template-left-menu li.toctree-l3.current > a,
 .sphinx-template-right-menu li.toctree-l3.current > a {
-  color: var(--google_green);
+  color: var(--google-green);
 }
 /* l3 current point */
 .sphinx-template-left-menu li.toctree-l3.current > a:before,
@@ -11780,7 +11785,7 @@ a:hover {
   left: -15px;
   top: -10%;
   font-size: 1.2rem;
-  color: var(--google_green);
+  color: var(--google-green);
 }
 @media screen and (min-width: 1101px) {
   .sphinx-template-left-menu li.toctree-l3.current > a:before,
@@ -11883,10 +11888,10 @@ a:hover {
   left: -12px;
 }
 .sphinx-template-right-menu li.active > a {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 .sphinx-template-right-menu li.active > a span.pre, .sphinx-template-right-menu li.active > a:before {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 .sphinx-template-right-menu li.active > a:after {
   content: "\2022";
@@ -11952,7 +11957,7 @@ a:hover {
 }
 
 #sphinx-template-right-menu .side-scroll-highlight {
-  color: #ee4c2c;
+  color: var(--pytorch-red);
 }
 
 .header-container {
@@ -12249,7 +12254,7 @@ a:hover {
   text-align: left;
 }
 .header-holder .main-menu ul li a.nav-dropdown-item.active:hover:before {
-  color: var(--google_green);
+  color: var(--google-green);
 }
 .header-holder .main-menu ul li a.nav-dropdown-item:last-of-type {
   border-bottom-color: transparent;
