--- a/trojanzoo_sphinx_theme/static/css/theme.css
+++ b/trojanzoo_sphinx_theme/static/css/theme.css
@@ -11834,8 +11834,8 @@ a:hover {
   }
 }
 
-.sphinx-template-left-menu li[aria-expanded="true"] ul,
-.sphinx-template-right-menu li[aria-expanded="true"] ul {
+.sphinx-template-left-menu li[aria-expanded="true"] > ul,
+.sphinx-template-right-menu li[aria-expanded="true"] > ul {
   display: block;
 }
 .sphinx-template-left-menu li ul,
